# coloured-logger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/coloured_logger/: __init__.py  formatter.py
tests/: test_formatter.py
