[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-coloured-logger"
version = "0.1.0"
description = "Simple coloured logging for Flask and FastAPI apps"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Skulldorom" }]
keywords = ["logging", "flask", "fastapi", "color"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"coloured_logger" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
